# Hacktrek

./: .gitignore  DAY1_HANDOFF.md  IMPLEMENTATION.md  Test1.py  config.py  main.py  pyproject.toml
Hacktrek/: .env.example  DAY1_HANDOFF.md  config.py
Hacktrek/core/graph/: loader.py  matrix.py
Hacktrek/tests/: test_matrix.py
api/: routes.py
core/agents/: coordinator.py  driver.py
core/routing/: path.py
core/vrp/: models.py  solver.py
tests/: test_agents.py  test_api.py  test_graph.py  test_integration.py  test_routing.py  test_vrp.py
