[project]
name = "hacktrek"
version = "0.1.0"
description = "FleetMind — Autonomous multi-driver delivery routing with real-time agent coordination"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # --- Web framework ---
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",

    # --- Graph & routing ---
    "osmnx>=2.1.0",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=2.3.3",

    # --- VRP solver ---
    "ortools>=9.10.0",

    # --- Agent simulation ---
    "simpy>=4.1.1",

    # --- State store ---
    "redis>=7.2.1",

    # --- Database ---
    "sqlmodel>=0.0.37",

    # --- NL dispatcher ---
    "groq>=1.0.0",
    "ollama>=0.6.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",

    # --- Dashboard & map ---
    "streamlit>=1.54.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.21.0",
]

[project.scripts]
api    = "main:start_api"
dashboard = "main:start_dashboard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "store", "api", "dashboard"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",        # for FastAPI test client
    "ruff>=0.6.0",          # linter + formatter
]